[package]
name = "partially_derive"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for the partially crate"
readme = "../../README.md"
authors = ["Ben Greenier <ben@bengreenier.com>"]
keywords = ["struct", "field", "optional", "partial"]
documentation = "https://docs.rs/partially"
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "2.0.31", features = ["full"] }
